--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>lu.uni.javaee</groupId>
-  <artifactId>exercise2</artifactId>
+  <artifactId>jpa_example</artifactId>
   <version>1.0</version>
   <packaging>war</packaging>
   <name>Exercise2</name>
@@ -47,14 +47,6 @@
       <artifactId>log4j-core</artifactId>
       <version>3.0.0-beta2</version>
     </dependency>
-    
-    <!-- PrimeFaces -->
-    <dependency>
-        <groupId>org.primefaces</groupId>
-        <artifactId>primefaces</artifactId>
-        <version>10.0.0</version>
-    </dependency>
-   
   </dependencies>
 
   <build>
