--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>lu.uni.javaee</groupId>
-  <artifactId>jpa_example</artifactId>
+  <artifactId>Exercise2</artifactId>
   <version>1.0</version>
   <packaging>war</packaging>
   <name>Exercise2</name>
